src/test/ui/typeck/typeck-default-trait-impl-precedence.stderr
error[E0277]: the trait bound `u32: Signed` is not satisfied
  --> $DIR/typeck-default-trait-impl-precedence.rs:18:5
   |
LL | fn is_defaulted<T:Defaulted>() { }
   |    ------------   --------- required by this bound in `is_defaulted`
...
LL |     is_defaulted::<&'static u32>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Signed` is not implemented for `u32`
   |
   = note: required because of the requirements on the impl of `Defaulted` for `&'static u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
